--- a/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
@@ -243,56 +243,64 @@
                     <p:dialog id="fileDialog" widgetVar="fileDownloadDialog" modal="true" closable="false"
                               header="#{msgs['options.file']}" resizable="false">
                         <h:form id="fileOptions">
-                            <p:panelGrid columns="1">
-                                <p:fileUpload fileUploadListener="#{patentController.uploadPresentationFile}" 
-                                              mode="advanced" dragDropSupport="false"  
-                                              sizeLimit="100000"
-                                              update=":#{p:component('fileDialog')},messages"
-                                              process=":#{p:component('fileDialog')}" 
-                                              rendered="#{patentController.selectedPatent.presentationFile == null}"
-                                              showButtons="false" 
-                                              allowTypes="/(\.|\/)(gif|jpeg|png)$/" />  
+                            <p:panelGrid columns="2">
+                                <p:column>
+                                    <p:fileUpload fileUploadListener="#{patentController.uploadPresentationFile}" 
+                                                  mode="advanced" dragDropSupport="false"
+                                                  sizeLimit="100000" multiple="false" label="#{msgs['choose.file']}"
+                                                  update=":#{p:component('fileDialog')},messages"
+                                                  process=":#{p:component('fileDialog')}" 
+                                                  rendered="#{patentController.temporaryPresentationFile == null}"
+                                                  showButtons="false" 
+                                                  allowTypes="/(\.|\/)(gif|jpeg|png|pdf)$/" />  
 
-                                <p:growl id="messages" showDetail="true"/>
+                                    <p:growl id="messages" showDetail="true"/>
+                                </p:column>
+                                <p:column>
+                                    <h:outputLabel rendered="#{patentController.temporaryPresentationFile != null}" value="#{msgs['help.delete']}"/>
+                                </p:column>
                             </p:panelGrid>
                             <br/>
 
                         </h:form>
                         <center>
-                            <p:commandButton title="#{msgs['download.file']}" ajax="false" 
+                            <p:commandButton value="Download" ajax="false" 
                                              icon="ui-icon-arrowthick-1-s" 
-                                             rendered="#{patentController.selectedPatent.presentationFile != null}"
-                                             actionListener="#{patentController.preDownloadPresentation(patentController.selectedPatent)}">  
+                                             rendered="#{patentController.temporaryPresentationFile != null}"
+                                             actionListener="#{patentController.downloadFile(patentController.temporaryPresentationFile)}">  
                                 <p:fileDownload  value="#{patentController.download}" />  
                             </p:commandButton>
-                            <p:commandButton title="#{msgs['delete.file']}"
-                                             value="#{msgs['delete.file']}" 
+                            <p:commandButton value="#{msgs['delete.file']}" 
                                              update=":#{p:component('fileDialog')}"
                                              process=":#{p:component('fileDialog')}" 
                                              action="#{patentController.deletePresentationFile()}" 
-                                             disabled="#{patentController.selectedPatent.presentationFile == null}"
+                                             disabled="#{patentController.temporaryPresentationFile == null}"
                                              onclick="if (!confirm('#{msgs['delete.file']}')) {
                                                          return false;
                                                      }"/>
                             <p:commandButton value="#{msgs['close']}" immediate="true"
-                                             onclick="fileDownloadDialog.hide();" />
+                                             onclick="fileDownloadDialog.hide();"  />
                         </center>
                     </p:dialog>
 
                     <p:dialog id="patentDialog" widgetVar="patentDownloadDialog" modal="true" closable="false"
                               header="#{msgs['options.patent']}" resizable="false">
                         <h:form>
-                            <p:panelGrid columns="1">
-                                <p:fileUpload fileUploadListener="#{patentController.uploadPatentInfo}" 
-                                              mode="advanced" dragDropSupport="false"
-                                              update=":#{p:component('patentDialog')},messages"
-                                              process=":#{p:component('patentDialog')}" 
-                                              rendered="#{patentController.selectedPatent.presentationFile == null}"
-                                              sizeLimit="5000000"
-                                              showButtons="false" 
-                                              allowTypes="/(\.|\/)(doc|docx|odt|pdf|txt)$/" />  
+                            <p:panelGrid columns="2">
+                                <p:column>
+                                    <p:fileUpload fileUploadListener="#{patentController.uploadPatentInfo}" 
+                                                  mode="advanced" dragDropSupport="false" 
+                                                  update=":#{p:component('patentDialog')},messages"
+                                                  process=":#{p:component('patentDialog')}" 
+                                                  rendered="#{patentController.temporaryPatentInfo == null}"
+                                                  sizeLimit="5000000" showButtons="false" label="#{msgs['choose.file']}"
+                                                  allowTypes="/(\.|\/)(doc|docx|odt|pdf|txt)$/" />  
 
-                                <p:growl id="messages" showDetail="true"/>
+                                    <p:growl id="messages" showDetail="true"/>
+                                </p:column>
+                                <p:column>
+                                    <h:outputLabel rendered="#{patentController.temporaryPatentInfo != null}" value="#{msgs['help.delete']}"/>
+                                </p:column>
                             </p:panelGrid>
                             <br/>
 
@@ -300,16 +308,15 @@
                         <center>
                             <p:commandButton title="#{msgs['download.patent']}" ajax="false" 
                                              icon="ui-icon-arrowthick-1-s" 
-                                             rendered="#{patentController.selectedPatent.patentInfo != null}"
-                                             actionListener="#{patentController.preDownloadPatent(patentController.selectedPatent)}">  
+                                             rendered="#{patentController.temporaryPatentInfo != null}"
+                                             actionListener="#{patentController.downloadFile(patentController.temporaryPatentInfo)}">  
                                 <p:fileDownload  value="#{patentController.download}" />  
                             </p:commandButton>
-                            <p:commandButton title="#{msgs['delete.file']}"
-                                             value="#{msgs['delete.file']}"
+                            <p:commandButton value="#{msgs['delete.file']}"
                                              update=":#{p:component('patentDialog')}"
                                              process=":#{p:component('patentDialog')}" 
                                              action="#{patentController.deletePatentInfo()}" 
-                                             disabled="#{patentController.selectedPatent.patentInfo == null}"
+                                             disabled="#{patentController.temporaryPatentInfo == null}"
                                              onclick="if (!confirm('#{msgs['delete.file']}')) {
                                                          return false;
                                                      }"/>
@@ -323,7 +330,7 @@
                 <h:panelGrid columns="2" cellpadding="10">
                     <h:commandLink value="#{msgs['update']}" action="#{patentController.save()}"
                                    style="color:white"  class="btn btn-large btn-info"/>
-                    <h:commandLink value="#{msgs['cancel']}" action="listPatent" 
+                    <h:commandLink value="#{msgs['cancel']}" immediate="true" action="#{patentController.cancelChange('edit')}" 
                                    style="color:white"  class="btn btn-large btn-info" />
                 </h:panelGrid>
             </h:form>
